# Battleships_Game

./: README.md  ideas_short.py  modes.md  pylintrc  pyproject.toml  requirements-ci.txt  tox.ini
game/: __init__.py  application.py  base_board.py  base_game.py  board.py  client.py  constants.py  player.py  ship.py  visual_board.py  visual_ship.py
game/interface/: base_board.py  player.py  ship.py
game/menus/: __init__.py  battle_end_menu.py  battle_menu.py  menu.py  multiplayer_menu.py  room_menu.py  ship_placement_menu.py  start_menu.py  wait_for_opponent_menu.py
game/players/: ai_player.py  battle_bot.py  command_literals.py  player.py
game/server/: command_handler.py  game_server.py  multiplayer_server.py  network.py  room.py  server.py
game/visuals/: visual_board.py  visual_ship.py
game/visuals/utils/: buttons.py  colors.py  colours.py  constants.py  draw_utils.py  shapes.py
server/: network.py  server.py
tests/interface/: base_board_test.py  ship_test.py
tests/players/: battle_bot_test.py
tests/server/: command_handler_test.py  game_server_test.py  room_test.py
tests/visuals/: visual_board_test.py  visual_ship_test.py
